[gd_scene load_steps=6 format=3 uid="uid://p1yjmej1m8kl"]

[ext_resource type="Script" uid="uid://caku8whppc1on" path="res://ui/menu/in_game_menu.gd" id="1_xodyf"]
[ext_resource type="AudioStream" uid="uid://f8nljuc06n8g" path="res://game/sounds/Click.wav" id="2_3nsbs"]
[ext_resource type="StyleBox" uid="uid://ca7qe4m52rutk" path="res://game/styles/btn_normal.tres" id="2_adm0j"]
[ext_resource type="StyleBox" uid="uid://bmyrx4u7rftjb" path="res://game/styles/btn_hover.tres" id="3_rk4f8"]
[ext_resource type="StyleBox" uid="uid://cy4rb730004by" path="res://game/styles/btn_pressed.tres" id="4_xaeyc"]

[node name="InGameMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xodyf")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.560784)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(160, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = ExtResource("4_xaeyc")
theme_override_styles/hover = ExtResource("3_rk4f8")
theme_override_styles/pressed = ExtResource("4_xaeyc")
theme_override_styles/normal = ExtResource("2_adm0j")
text = "PLAY_BTN"

[node name="Magazine" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = ExtResource("4_xaeyc")
theme_override_styles/hover = ExtResource("3_rk4f8")
theme_override_styles/pressed = ExtResource("4_xaeyc")
theme_override_styles/normal = ExtResource("2_adm0j")
text = "MAGAZINE_BTN"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = ExtResource("4_xaeyc")
theme_override_styles/hover = ExtResource("3_rk4f8")
theme_override_styles/pressed = ExtResource("4_xaeyc")
theme_override_styles/normal = ExtResource("2_adm0j")
text = "SETTINGS_BTN"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = ExtResource("4_xaeyc")
theme_override_styles/hover = ExtResource("3_rk4f8")
theme_override_styles/pressed = ExtResource("4_xaeyc")
theme_override_styles/normal = ExtResource("2_adm0j")
text = "QUIT_BTN"

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3nsbs")
bus = &"sfx"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Magazine" to="." method="_on_magazine_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
